    + [ADB] Exempt all binary packages built from the zlib source from
      the embedded-zlib test, not just those with binary package names
      matching zlib.+.  Thanks, Mark Brown.
  * checks/fields.desc:
    + [ADB] Re-order the fields of build-depends-on-build-essential so that
      all of the descriptive text is included.  Thanks, Jonathan Wiltshire.
      (Closes: #557786)

  * frontend/lintian:
    + [RA] Add options --suppress-tags and --suppress-tags-from-file to
      completely suppress the given tags.
    + [RA] Support comments and blank lines in --tags-from-file files.
    + [RA] Run the check modules in sorted order.
    + [RA] Create a global Lintian::Tags object and use it instead of
      setting variables in the Tags namespace.  Move display level code
      from here to Lintian::Tags.  Adjust calls for the new Lintian::Tags
      module.

  * lib/Lintian/Check.pm:
    + [RA] Use Lintian::Tags instead of Tags.
  * lib/Lintian/Output.pm:
    + [RA] print_tag() now takes an additional argument containing
      override data and expects a Lintian::Tag::Info object as the tag
      info instead of a hash.
    + [RA] Adjust for the renaming of pkg in the file information hash.
  * lib/Lintian/Output/*.pm:
    + [RA] Adjust for print_tag() and file information hash changes.
  * lib/Lintian/Output/XML.pm:
    + [RA] Rewrite to be more readable and fix the tags attribute for
      overridden experimental tags.
  * lib/Lintian/Tag/Info.pm:
    + [RA] Add a code method that returns the tag code corresponding to
      the severity and certainty for a tag, based on get_tag_code from
      Tags.pm.
    + [RA] Add certainty, severity, and tag accessor methods.
    + [RA] Add a method saying whether a tag is experimental.
    + [RA] Record the check script corresponding to each tag and add an
      accessor method for it.
    + [RA] Add a sources method returning a list of sources referenced by
      a tag, based on the get_tag_source method from Tags.pm.