@@ -1,0 +1,68 @@
+# This file lists all tags that cause an automatic reject on upload and cannot
+# be overridden.  It is based on the data file retrieved from
+# http://ftp-master.debian.org/static/lintian.tags
+#
+# Last updated: 2009-12-24
+
+FSSTND-dir-in-usr
+FSSTND-dir-in-var
+arch-any-in-binary-pkg
+bad-package-name
+bad-package-name
+bad-relation
+bad-version-number
+binary-file-compressed-with-upx
+binary-in-etc
+build-info-in-binary-control-file-section
+control-file-has-bad-owner
+control-file-has-bad-permissions
+control-interpreter-in-usr-local
+copyright-file-compressed
+copyright-file-is-symlink
+copyright-refers-to-incorrect-directory
+copyright-refers-to-old-directory
+debian-control-file-uses-obsolete-national-encoding
+debian-control-with-duplicate-fields
+debian-rules-missing-required-target
+debian-rules-not-a-makefile
+description-is-dh_make-template
+description-synopsis-is-empty
+dir-or-file-in-mnt
+dir-or-file-in-opt
+dir-or-file-in-srv
+dir-or-file-in-tmp
+extended-description-is-empty
+file-in-etc-not-marked-as-conffile
+file-in-usr-marked-as-conffile
+forbidden-postrm-interpreter
+library-in-debug-or-profile-should-not-be-stripped
+magic-arch-in-arch-list
+maintainer-address-is-on-localhost
+maintainer-address-malformed
+maintainer-address-missing
+maintainer-name-missing
+maintainer-script-removes-device-files
+malformed-deb-archive
+missing-dependency-on-perlapi
+no-architecture-field
+no-architecture-field
+no-copyright-file
+no-maintainer-field
+no-package-name
+no-source-field
+no-version-field
+not-allowed-control-file
+old-style-copyright-file
+package-contains-ancient-file
+package-has-no-description
+package-installs-python-pyc
+package-not-lowercase
+package-uses-local-diversion
+section-is-dh_make-template
+source-field-does-not-match-pkg-name
+symlink-has-too-many-up-segments
+too-many-architectures
+uploader-address-is-on-localhost
+uploader-address-malformed
+uploader-name-missing
+usr-share-doc-symlink-to-foreign-package
