@@ -1,0 +1,3 @@
+usr/local/share/lintian
+var/lock/lintian
+opt/lintian
