@@ -1,0 +1,6 @@
+Testname: lintian-ftp-rejects
+Sequence: 2500
+Version: 1.0
+Options: -F
+Description: Test Lintian --ftp-master-rejects handling
+Test-For: dir-or-file-in-opt
