@@ -1,0 +1,1 @@
+E: lintian-ftp-rejects: dir-or-file-in-opt opt/lintian/
